--- a/modules/join_us_module.module/module.css
+++ b/modules/join_us_module.module/module.css
@@ -1,4 +1,5 @@
-.header-text{margin-bottom: 0.25rem;
+.header_text{
+  margin-bottom: 0.25rem;
     line-height: 1.1;
     letter-spacing: .01em;
     text-shadow: 0px 0px 18px rgb(0 0 0 / 20%); 
