--- a/templates/Home.html
+++ b/templates/Home.html
@@ -7,6 +7,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ content.html_title }}</title>
+      {{ require_css(get_asset_url('../css/_layout.css')) }}
     <meta name="description" content="{{ content.meta_description }}">
     {{ standard_header_includes }}
   </head>
@@ -18,8 +19,14 @@
     
     {% module "module_16468859481655" path="/kaksio_teams_theme/modules/join_us_module", label="join_us_module" %}
     
-    {% module "module_16468859591537" path="/kaksio_teams_theme/modules/employee_card_module", label="employee_card_module" %}
+      {% module "module_16468859591537" path="/kaksio_teams_theme/modules/employee_card_module", label="employee_card_module" %}
     
+    
+    {% module "module_164689671015319" path="/kaksio_teams_theme/modules/footer", label="footer" %}
+    
+    
+  
+  
     {{ standard_footer_includes }}
   </body>
 </html>
